--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,11 @@ dependencies:
   flutter:
     sdk: flutter
   page_transition: '^1.1.5'
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  sqflite: ^1.3.1
   http: ^0.12.0+1
   fluttertoast: ^3.1.0
 dev_dependencies:
